[tool.poetry]
name = "distiller_color"
version = "1.0"
description = ""
authors = []
documentation = ""
readme = "README.md"

[tool.poetry.scripts]
lion = "main:main"

[tool.poetry.dependencies]
python = "3.5.5"
numpy = "^1.16"
tensorflow = "^1.14" 
xlsxwriter = "^1.2.2"
scikit-learn = "0.21.2"
torchnet = "^0.0.4"
matplotlib = "^3.0"
pydot = "^1.4.1"
jupyter = "^1.0.0"
pretrainedmodels = "^0.7.4"
onnx = "^1.6"
pandas = "^0.22.0"
# Distiller dependencies
tabulate = "^0.8.3"
tqdm = "^4.33.0"
scipy = "^1.3.0"
gitpython = "^2.1.11"
qgrid = "^1.1.1"
graphviz = "^0.10.1"
ipywidgets = "^7.4.2"
bqplot = "^0.11.5"
pyyaml = "^5.1.2"
gym = "^0.12.5"
pillow = "^6.2.1"
torch = "0.3.1"
torchvision = "0.2.0"
openCv-python = "^4.4.0"
torchsummary = "^1.5.1"

[tool.poetry.dev-dependencies]
bandit = "^1.5"
codecov = "^2.0.15"
pylama = "^7.7.1"
pyhocon = "0.3.51"
pytest = "^4.6.1"
pytest-cov = "^2.7.1"
mypy = "^0.720.0"
sphinx-rtd-theme = "^0.4.3"
pylint = "^2.3"
sphinx = "^2.1"
nbsphinx = "^0.5.0"
# mlflow = "^1.3"


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | /*.yaml
  | lion/config/*
  | tests/data/*
  | __pycache__
  | distiller
)/
'''
include = '''^/(lion|tests)/'''
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
